VERSION[0.4.0][2024/04/26]
<!-- Release notes generated using configuration in .github/release.yml at dev -->



VERSION[0.3.0][2024/04/16]

--- New to Path of Building for Last Epoch ---

Major improvement to skill Hit DPS calculations and improvement to the passives and skills tree looks (multiple points can now be allocated to a single node).

There are still a lot of unrecognized mods but DPS indication can already provide useful feedback for several skills.

There is no support yet for ailments and DoT.

* Skill nodes only affect the related skill
* Support for skill added damage effectiveness, increased damage scaling per attribute, cooldown, cast time, critical chance
* Support for several mods: more damage in skill nodes, cooldown, cast speed, elemental damage, per attribute suffixes ...
* Support for mastery class passive bonuses (if the mods are recognized only)
* Guess main skill at import time (based on DPS calculation somehow)
* Support for weapon attack rate for attack skills

VERSION[0.2.0][2024/04/09]

--- New to Path of Building for Last Epoch ---

This release introduces DPS calculation. It takes into account a large variety of skills, but it does not support yet a lot of mods.

So do not expect passives in the skill tree to have the intended effect for example. What is probably working is mods like "+x melee physical damage" or "x% increased fire damage"

* Basic DPS calculation support for several skills
* Fixed several mods from imported data (display value)
* A bit of cleaning (removing some irrelevant files)
* A few minor fixes (save/load fix, display of damage types in breakdown,...)

VERSION[0.1.0][2024/04/02]
First release, it started as a fork of Path of Building which is slowly adapted to Last Epoch
so most content is not yet relevant to the game.

The following features are supported (or partially):
* Passive tree
* Character import: for offline character and from LE tools build planner