@@ -9,7 +9,7 @@ This is a fork of Path Of Building adapted to work for the game **Last Epoch**. 
 * Legendary items supported through LE tools import
 * Basic support for following stat calculation: health, mana, armor, attributes
 * Skills: Can select up to 5 skills which allows to spend points in the associated skill trees
-* DPS calculation: basic support for several skills, **does not** take ailments and DoT into account
+* DPS calculation: basic support for several skills
 
 Note that **most content (docs or code) is outdated** since they only apply to the original project. Everything should be migrated as time goes by.
 
@@ -21,7 +21,6 @@ For linux, there may be a native support in the future but for now it runs fine 
 
 ## Roadmap
 * Legendary items (for offline import)
-* Ailments and Dot support
 * Blessings support
 * Have a selected skill dps correctly computed
 * Points requirements and constraints in skills and passives
